--- a/codelab/cpp-smoke-app/BUILD.bazel
+++ b/codelab/cpp-smoke-app/BUILD.bazel
@@ -1,3 +1,10 @@
+load(
+    "//bazel/copts:configure.bzl",
+    "ONE_DEFAULT_COPTS",
+    "ONE_DEFAULT_LINKOPTS",
+    "ONE_TEST_COPTS",
+)
+
 cc_binary(
     name = "cpp_smoke_app",
     srcs = ["main.cc"],
@@ -8,4 +15,6 @@ cc_library(
     name = "library",
     srcs = ["library.cc"],
     hdrs = ["library.h"],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
 )
