--- a/codelab/cpp-smoke-app/BUILD.bazel
+++ b/codelab/cpp-smoke-app/BUILD.bazel
@@ -18,3 +18,15 @@ cc_library(
     copts = ONE_DEFAULT_COPTS,
     linkopts = ONE_DEFAULT_LINKOPTS,
 )
+
+cc_test(
+    name = "library_test",
+    srcs = ["library_test.cc"],
+    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    deps = [
+        ":library",
+        "@com_google_googletest//:gtest_main",
+    ],
+    size = "small",
+)
