--- a/bazel/BUILD.bazel
+++ b/bazel/BUILD.bazel
@@ -15,6 +15,13 @@ config_setting(
 )
 
 config_setting(
+    name = "linux",
+    constraint_values = [
+        "@platforms//os:linux",
+    ],
+)
+
+config_setting(
     name = "windows",
     constraint_values = [
         "@platforms//os:windows",
