--- a/one-auxiliary-parent/one-pom/pom.xml
+++ b/one-auxiliary-parent/one-pom/pom.xml
@@ -63,6 +63,30 @@
         <scope>test</scope>
       </dependency>
 
+      <!-- commons-lang3 -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>${version.commons.lang3}</version>
+        <scope>compile</scope>
+      </dependency>
+
+      <!-- commons-math3 -->
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-math3</artifactId>
+        <version>${version.commons.math3}</version>
+        <scope>compile</scope>
+      </dependency>
+
+      <!-- Guava -->
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava</artifactId>
+        <version>${version.guava}</version>
+        <scope>compile</scope>
+      </dependency>
+
       <!-- Javax -->
       <dependency>
         <groupId>javax.annotation</groupId>
