--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
   <modules>
     <module>one-auxiliary-parent</module>
     <module>codelab</module>
+    <module>java-transient-fault-handling</module>
   </modules>
 
   <properties>
@@ -28,7 +29,11 @@
 
     <!-- Dependency versions, sync with bazel, ordered lexicographically -->
     <version.assertj>3.13.2</version.assertj>
+    <version.commons.lang3>3.9</version.commons.lang3>
+    <version.commons.math3>3.6.1</version.commons.math3>
     <version.grpc>1.22.1</version.grpc>
+    <!-- Guava, keep aligned with protobuf requirement -->
+    <version.guava>26.0-jre</version.guava>
     <version.javax.annotation>1.3.2</version.javax.annotation>
     <version.junit>4.12</version.junit>
     <version.jupiter>5.5.1</version.jupiter>
