--- a/one-auxiliary-parent/one-pom/pom.xml
+++ b/one-auxiliary-parent/one-pom/pom.xml
@@ -63,6 +63,14 @@
         <scope>test</scope>
       </dependency>
 
+      <!-- commons-cli -->
+      <dependency>
+        <groupId>commons-cli</groupId>
+        <artifactId>commons-cli</artifactId>
+        <version>${version.commons.cli}</version>
+        <scope>compile</scope>
+      </dependency>
+
       <!-- commons-lang3 -->
       <dependency>
         <groupId>org.apache.commons</groupId>
