--- a/configuration_flattener/src/main/java/io/github/hcoona/BUILD.bazel
+++ b/configuration_flattener/src/main/java/io/github/hcoona/BUILD.bazel
@@ -1,3 +1,3 @@
 package(
-    default_visibility = ["//configuration_flattener/src:__subpackages__"]
+    default_visibility = ["//configuration_flattener/src:__subpackages__"],
 )
