--- a/configuration_flattener/src/test/resources/BUILD.bazel
+++ b/configuration_flattener/src/test/resources/BUILD.bazel
@@ -1,3 +1,3 @@
 package(
-    default_visibility = ["//configuration_flattener/src/test:__subpackages__"]
+    default_visibility = ["//configuration_flattener/src/test:__subpackages__"],
 )
