--- a/configuration_flattener/src/test/resources/ini/BUILD.bazel
+++ b/configuration_flattener/src/test/resources/ini/BUILD.bazel
@@ -1,5 +1,5 @@
 package(
-    default_visibility = ["//configuration_flattener/src/test:__subpackages__"]
+    default_visibility = ["//configuration_flattener/src/test:__subpackages__"],
 )
 
 filegroup(
