--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>one-auxiliary-parent</module>
     <module>codelab</module>
     <module>java-transient-fault-handling</module>
+    <module>native-named-mutex</module>
     <module>zed2zip</module>
   </modules>
 
@@ -31,12 +32,14 @@
     <!-- Dependency versions, sync with bazel, ordered lexicographically -->
     <version.assertj>3.13.2</version.assertj>
     <version.commons.cli>1.4</version.commons.cli>
+    <version.commons.exec>1.3</version.commons.exec>
     <version.commons.lang3>3.9</version.commons.lang3>
     <version.commons.math3>3.6.1</version.commons.math3>
     <version.grpc>1.22.1</version.grpc>
     <!-- Guava, keep aligned with protobuf requirement -->
     <version.guava>26.0-jre</version.guava>
     <version.javax.annotation>1.3.2</version.javax.annotation>
+    <version.jna>5.4.0</version.jna>
     <version.junit>4.12</version.junit>
     <version.jupiter>5.5.1</version.jupiter>
     <!-- Netty, keep aligned with grpc-netty requirement -->
