--- a/tools/google_java_format/BUILD.bazel
+++ b/tools/google_java_format/BUILD.bazel
@@ -1,5 +1,5 @@
 java_binary(
-    name = "google-java-format",
+    name = "google_java_format",
     main_class = "com.google.googlejavaformat.java.Main",
     runtime_deps = [
         "@maven//:com_google_googlejavaformat_google_java_format",
