Upgrade to bazel v3.2.0

--- a/directory_manifest/src/main/java/io/github/hcoona/directory_manifest/BUILD
+++ b/directory_manifest/src/main/java/io/github/hcoona/directory_manifest/BUILD
@@ -1,3 +1,5 @@
+load("@rules_java//java:defs.bzl", "java_binary", "java_library")
+
 package(
     default_visibility = ["//directory_manifest/src:__subpackages__"],
 )
