--- a/codelab/java-smoke-app/BUILD.bazel
+++ b/codelab/java-smoke-app/BUILD.bazel
@@ -1,3 +1,5 @@
+load("@rules_java//java:defs.bzl", "java_binary", "java_library", "java_test")
+
 java_binary(
     name = "java_smoke_app",
     srcs = [
