--- a/codelab/protobuf_encoder/BUILD.bazel
+++ b/codelab/protobuf_encoder/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
 load(
     "//bazel/copts:configure.bzl",
     "ONE_DEFAULT_COPTS",
@@ -23,5 +24,5 @@ cc_test(
         ":encoder",
         "@com_google_googletest//:gtest",
         "@com_google_googletest//:gtest_main",
-    ]
+    ],
 )
