--- a/zed2zip/BUILD.bazel
+++ b/zed2zip/BUILD.bazel
@@ -1,3 +1,5 @@
+load("@rules_java//java:defs.bzl", "java_binary")
+
 java_binary(
     name = "zed2zip",
     srcs = ["src/main/java/net/slightlymagic/thefiremind/ZedToZip.java"],
