Add a few third_party libraries.

--- a/.gitignore
+++ b/.gitignore
@@ -270,6 +270,7 @@ $RECYCLE.BIN/
 # VSCode generated eclipse files for Java
 .project
 .settings
+.classpath
 
 # nail data
 !/nail/examples/zip/test.zip
