--- a/gtl/BUILD.bazel
+++ b/gtl/BUILD.bazel
@@ -39,3 +39,24 @@ cc_library(
     name = "priority_queue_util",
     hdrs = ["priority_queue_util.h"],
 )
+
+cc_library(
+    name = "top_n",
+    hdrs = ["top_n.h"],
+    deps = [
+        "@com_github_google_glog//:glog",
+    ],
+)
+
+cc_test(
+    name = "top_n_test",
+    srcs = [
+        "top_n_test.cc",
+    ],
+    deps = [
+        ":top_n",
+        "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/random",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
