[GTL] (WIP) Add file_system.

--- a/gtl/BUILD.bazel
+++ b/gtl/BUILD.bazel
@@ -17,6 +17,9 @@ cc_library(
 #         "file_system.h",
 #     ],
 #     deps = [
+#         ":scanner",
+#         "//config",
+#         "@com_github_google_glog//:glog",
 #         "@com_google_absl//absl/status",
 #         "@com_google_absl//absl/strings",
 #         "@com_googlesource_code_re2//:re2",
