--- a/gtl/BUILD.bazel
+++ b/gtl/BUILD.bazel
@@ -57,7 +57,6 @@ cc_test(
     srcs = [
         "map_util_test.cc",
     ],
-    visibility = ["//visibility:public"],
     deps = [
         ":map_util",
         "@com_google_googletest//:gtest_main",
@@ -74,6 +73,15 @@ cc_library(
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/synchronization",
+    ],
+)
+
+cc_test(
+    name = "path_test",
+    srcs = ["path_test.cc"],
+    deps = [
+        ":path",
+        "@com_google_googletest//:gtest_main",
     ],
 )
 
