--- a/gtl/BUILD.bazel
+++ b/gtl/BUILD.bazel
@@ -33,6 +33,19 @@ cc_library(
     ],
 )
 
+cc_library(
+    name = "posix_file_system",
+    srcs = ["posix_file_system.cc"],
+    hdrs = ["posix_file_system.h"],
+    deps = [
+        ":file_system",
+        "//config",
+        "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/status",
+        "@com_google_absl//absl/strings",
+    ],
+)
+
 cc_test(
     name = "file_system_test",
     srcs = ["file_system_test.cc"],
