--- a/gtl/BUILD.bazel
+++ b/gtl/BUILD.bazel
@@ -1,4 +1,29 @@
 load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
+load(
+    "//bazel/copts:configure.bzl",
+    "ONE_DEFAULT_COPTS",
+    "ONE_DEFAULT_LINKOPTS",
+    "ONE_TEST_COPTS",
+)
+
+cc_library(
+    name = "auto_reset",
+    hdrs = ["auto_reset.h"],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    visibility = ["//visibility:public"],
+)
+
+cc_test(
+    name = "auto_reset_test",
+    srcs = ["auto_reset_unittest.cc"],
+    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    deps = [
+        ":auto_reset",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
 
 cc_library(
     name = "bits",
