--- a/gtl/BUILD.bazel
+++ b/gtl/BUILD.bazel
@@ -261,6 +261,38 @@ cc_test(
     ],
 )
 
+# cc_library(
+#     name = "sequence_checker",
+#     srcs = [
+#         "sequence_checker_impl.cc",
+#     ],
+#     hdrs = [
+#         "sequence_checker.h",
+#         "sequence_checker_impl.h",
+#     ],
+#     copts = ONE_DEFAULT_COPTS,
+#     linkopts = ONE_DEFAULT_LINKOPTS,
+#     visibility = ["//visibility:public"],
+#     deps = [
+#         ":compiler_specific",
+#         ":sequence_token",
+#         ":thread_annotations",
+#         "@com_github_google_glog//:glog",
+#         "@com_google_absl//absl/synchronization",
+#     ],
+# )
+
+# cc_test(
+#     name = "sequence_checker_test",
+#     srcs = ["sequence_checker_unittest.cc"],
+#     copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
+#     linkopts = ONE_DEFAULT_LINKOPTS,
+#     deps = [
+#         ":sequence_checker",
+#         "@com_google_googletest//:gtest_main",
+#     ],
+# )
+
 cc_library(
     name = "sequence_token",
     srcs = ["sequence_token.cc"],
