--- a/gtl/container/BUILD.bazel
+++ b/gtl/container/BUILD.bazel
@@ -26,13 +26,13 @@ cc_test(
         "//bazel:llvm_compiler": ["-Werror=thread-safety-analysis"],
         "//conditions:default": [],
     }),
+    defines = ["UNIT_TEST"],
     linkopts = ONE_DEFAULT_LINKOPTS,
     deps = [
         ":id_map",
         "//gtl/test:gtest_util",
         "@com_google_googletest//:gtest_main",
     ],
-    defines = ["UNIT_TEST"],
 )
 
 cc_library(
@@ -43,5 +43,40 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "@com_github_google_glog//:glog",
+    ],
+)
+
+cc_library(
+    name = "util",
+    hdrs = ["util.h"],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+)
+
+cc_library(
+    name = "vector_buffer",
+    hdrs = ["vector_buffer.h"],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    visibility = ["//visibility:public"],
+    deps = [
+        ":util",
+        "//gtl/numeric:checked_math",
+        "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/meta:type_traits",
+    ],
+)
+
+cc_test(
+    name = "vector_buffer_test",
+    srcs = ["vector_buffer_unittest.cc"],
+    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    deps = [
+        ":vector_buffer",
+        "//gtl/test:copy_only_int",
+        "//gtl/test:gtest_util",
+        "//gtl/test:move_only_int",
+        "@com_google_googletest//:gtest_main",
     ],
 )
