--- a/gtl/container/BUILD.bazel
+++ b/gtl/container/BUILD.bazel
@@ -7,6 +7,33 @@ load(
 )
 
 cc_library(
+    name = "circular_deque",
+    hdrs = ["circular_deque.h"],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    visibility = ["//visibility:public"],
+    deps = [
+        ":vector_buffer",
+        "//gtl:macros",
+        "//gtl:type_traits",
+        "@com_github_google_glog//:glog",
+    ],
+)
+
+cc_test(
+    name = "circular_deque_test",
+    srcs = ["circular_deque_unittest.cc"],
+    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    deps = [
+        ":circular_deque",
+        "//gtl/test:copy_only_int",
+        "//gtl/test:move_only_int",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_library(
     name = "id_map",
     hdrs = ["id_map.h"],
     copts = ONE_DEFAULT_COPTS,
