--- a/gtl/container/BUILD.bazel
+++ b/gtl/container/BUILD.bazel
@@ -88,9 +88,9 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         ":util",
+        "//gtl:type_traits",
         "//gtl/numeric:checked_math",
         "@com_github_google_glog//:glog",
-        "@com_google_absl//absl/meta:type_traits",
     ],
 )
 
