--- a/gtl/BUILD.bazel
+++ b/gtl/BUILD.bazel
@@ -87,6 +87,7 @@ cc_library(
     linkopts = ONE_DEFAULT_LINKOPTS,
     visibility = ["//visibility:public"],
     deps = [
+        ":macros",
         ":path",
         ":scanner",
         "//config",
