--- a/gtl/BUILD.bazel
+++ b/gtl/BUILD.bazel
@@ -177,6 +177,42 @@ cc_test(
 )
 
 cc_library(
+    name = "location",
+    srcs = [
+        "location.cc",
+    ],
+    hdrs = [
+        "location.h",
+    ],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    visibility = ["//visibility:public"],
+    deps = [
+        ":compiler_specific",
+        "//config",
+        "@com_github_google_glog//:glog",
+        "@com_google_absl//absl/hash",
+        "@com_google_absl//absl/strings",
+        "@com_google_absl//absl/strings:str_format",
+        "@com_google_absl//absl/types:span",
+    ],
+)
+
+cc_test(
+    name = "location_test",
+    srcs = [
+        "location_unittest.cc",
+    ],
+    copts = ONE_DEFAULT_COPTS + ONE_TEST_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    deps = [
+        ":compiler_specific",
+        ":location",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
+
+cc_library(
     name = "macros",
     hdrs = ["macros.h"],
     copts = ONE_DEFAULT_COPTS,
