Add parquet examples.

--- a/arrow/BUILD.bazel
+++ b/arrow/BUILD.bazel
@@ -92,12 +92,46 @@ cc_library(
         "util/compression_snappy.cc",
     ] + [
         "util/compression_zlib.cc",
+    ] + [
+        "compute/context.cc",
+        "compute/expression.cc",
+        "compute/kernels/add.cc",
+        "compute/kernels/aggregate.cc",
+        "compute/kernels/boolean.cc",
+        "compute/kernels/cast.cc",
+        "compute/kernels/compare.cc",
+        "compute/kernels/count.cc",
+        "compute/kernels/filter.cc",
+        "compute/kernels/hash.cc",
+        "compute/kernels/isin.cc",
+        "compute/kernels/match.cc",
+        "compute/kernels/mean.cc",
+        "compute/kernels/minmax.cc",
+        "compute/kernels/nth_to_indices.cc",
+        "compute/kernels/sort_to_indices.cc",
+        "compute/kernels/sum.cc",
+        "compute/kernels/take.cc",
+        "compute/kernels/util_internal.cc",
+        "compute/logical_type.cc",
+        "compute/operation.cc",
+        "compute/operations/cast.cc",
+        "compute/operations/literal.cc",
+    ] + [
+        "ipc/dictionary.cc",
+        "ipc/feather.cc",
+        "ipc/message.cc",
+        "ipc/metadata_internal.cc",
+        "ipc/options.cc",
+        "ipc/reader.cc",
+        "ipc/writer.cc",
     ] + glob([
         "**/*.h",
     ]) + glob(["**/*.hpp"]),
     copts = ONE_DEFAULT_COPTS,
     defines = [
         "URI_STATIC_BUILD",
+        "ARROW_USE_GLOG",
+        "ARROW_HAVE_SSE4_2",
         "ARROW_WITH_LZ4",
         "ARROW_WITH_SNAPPY",
         "ARROW_WITH_ZLIB",
@@ -105,6 +139,7 @@ cc_library(
         "HAS_VOID_T=0",
         "HAS_DEDUCTION_GUIDES=0",
     ],
+    includes = ["."],
     linkopts = ONE_DEFAULT_LINKOPTS + [
         "-ldl",
     ],
@@ -113,6 +148,8 @@ cc_library(
     deps = [
         ":uri",
         "//third_party/hadoop:hdfs",
+        "@com_github_google_flatbuffers//:runtime_cc",
+        "@com_github_google_glog//:glog",
         "@com_github_google_snappy//:snappy",
         "@com_github_lz4_lz4//:lz4",
         "@com_github_madler_zlib//:zlib",
