--- a/parquet/BUILD.bazel
+++ b/parquet/BUILD.bazel
@@ -28,8 +28,8 @@ cc_library(
         "windows_compatibility.h",
         ":gen_cc_thrift_parquet",
     ],
-    includes = ["."],
     copts = ONE_DEFAULT_COPTS,
+    includes = ["."],
     linkopts = ONE_DEFAULT_LINKOPTS,
     deps = [
         "//arrow",
@@ -72,6 +72,8 @@ cc_library(
     copts = ONE_DEFAULT_COPTS,
     defines = [
         "URI_STATIC_BUILD",
+        "ARROW_USE_GLOG",
+        "ARROW_HAVE_SSE4_2",
         "ARROW_WITH_LZ4",
         "ARROW_WITH_SNAPPY",
         "ARROW_WITH_ZLIB",
@@ -84,5 +86,6 @@ cc_library(
     deps = [
         ":cc_thrift_parquet",
         "//arrow",
+        "@boringssl//:crypto",
     ],
 )
