--- a/codelab/parse_pb_on_the_fly/BUILD.bazel
+++ b/codelab/parse_pb_on_the_fly/BUILD.bazel
@@ -9,10 +9,12 @@ cc_binary(
     name = "parse_pb_on_the_fly",
     srcs = ["main.cc"],
     copts = ONE_DEFAULT_COPTS,
+    data = ["messages.proto"],
     linkopts = ONE_DEFAULT_LINKOPTS,
     deps = [
         "//gtl:macros",
         "//gtl:posix_file_system",
+        "@bazel_tools//tools/cpp/runfiles",
         "@com_github_gflags_gflags//:gflags",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/status",
