--- a/directory_manifest/BUILD.bazel
+++ b/directory_manifest/BUILD.bazel
@@ -20,6 +20,7 @@ cc_binary(
         "//gtl:macros",
         "//gtl:posix_file_system",
         "//gtl/container:circular_deque",
+        "//gtl/crypto:sha2",
         "@com_github_gflags_gflags//:gflags",
         "@com_github_google_glog//:glog",
     ],
