[Util] Add down_cast.

--- a/util/BUILD.bazel
+++ b/util/BUILD.bazel
@@ -16,3 +16,11 @@ cc_library(
         "@com_google_protobuf//:protobuf",
     ],
 )
+
+cc_library(
+    name = "casts",
+    hdrs = ["casts.h"],
+    copts = ONE_DEFAULT_COPTS,
+    linkopts = ONE_DEFAULT_LINKOPTS,
+    visibility = ["//visibility:public"],
+)
