--- a/codelab/pb_to_arrow/BUILD.bazel
+++ b/codelab/pb_to_arrow/BUILD.bazel
@@ -15,6 +15,7 @@ cc_binary(
     linkopts = ONE_DEFAULT_LINKOPTS,
     deps = [
         ":converter",
+        ":status_util",
         "//gtl:macros",
         "//gtl:map_util",
         "//gtl:posix_file_system",
@@ -42,6 +43,7 @@ cc_library(
         "//gtl:map_util",
         "//gtl:no_destructor",
         "//parquet",
+        "//util:casts",
         "@com_github_google_glog//:glog",
         "@com_google_absl//absl/container:flat_hash_map",
         "@com_google_absl//absl/status",
